inicio-prod-nav fix

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse d-flex justify-content-end navItems" id="navbarNavDropdown">
+              <div class="collapse navbar-collapse justify-content-end navItems" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link" href="./index.html">Inicio</a>
@@ -82,10 +82,10 @@
                 <h2 class="tituloSecundario" >Inicio</h2>
             </div>
             <div class="parrafoInicio container">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Praesentium reiciendis, enim iure dolore tempore temporibus 
-                    magnam similique hic voluptatum perspiciatis nam ducimus dolorum, 
-                    ab quis laboriosam reprehenderit minima, dolores officiis!
+                <p>
+                    En 2018 comenzó este viaje creativo que cada día está llegando más lejos. Es un emprendimiento donde entre telas,
+                    agujas e hilachas soy feliz. Te invito a subir a mi vagón y juntas recorrer mis creaciones que están hechas con 
+                    mucho amor.
                 </p>
             </div>
         </div>
@@ -104,10 +104,7 @@
     <!-- parrafo -->
     <section class="container">
         <p class="text-center fs-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Vero tempora rerum fugit dolore. Nesciunt eum ipsa omnis beatae sit 
-            eveniet quasi nostrum qui placeat? Non maiores quae delectus 
-            asperiores porro.
+            Somos madre e hija. 
         </p>
     </section>
     <!-- imagenes -->
@@ -139,18 +136,21 @@
     <section class="container">
         <div class="row justify-content-center text-center mt-5">
             <div class="col">
-                <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/homedeco.html">HOME & DECO
-                    <img class="img-fluid" src="/src/img/logo/logo-vagon.JPG" alt="manualidades, vagon, telas, costura, kids, carpas">
+                <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/homedeco.html">
+                    <img class="img-fluid img-prod" src="/src/img/logo/logo-vagon.JPG" alt="manualidades, vagon, telas, costura, kids, carpas">
+                    <p>HOME & DECO</p>
                 </a>
             </div>
             <div class="col">
-                <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/kitchen.html">KITCHEN
-                    <img class="img-fluid" src="/src/img/logo/logo-vagon.JPG" alt="manualidades, vagon, telas, costura, kids, carpas">
+                <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/kitchen.html">
+                    <img class="img-fluid img-prod" src="/src/img/logo/logo-vagon.JPG" alt="manualidades, vagon, telas, costura, kids, carpas">
+                    <p>KITCHEN</p>
                 </a>   
             </div>
             <div class="col">
-                <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/kids.html">KIDS
-                    <img class="img-fluid transform" src="/src/img/logo/logo-vagon.JPG" alt="manualidades, vagon, telas, costura, kids, carpas">
+                <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/kids.html">
+                    <img class="img-fluid img-prod" src="/src/img/logo/logo-vagon.JPG" alt="manualidades, vagon, telas, costura, kids, carpas">
+                    <p>KIDS</p>
                 </a>  
             </div>
         </div>
