--- a/index.html
+++ b/index.html
@@ -177,19 +177,19 @@
         <div class="row justify-content-center text-center mt-5">
             <div class="col">
                 <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/homedeco.html">
-                    <img class="img-fluid img-prod" src="/src/img/logo/logo-vagon.JPG" alt="manualidades, vagon, telas, costura, kids, carpas">
+                    <img class="img-fluid img-prod" src="/src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
                     <p>HOME & DECO</p>
                 </a>
             </div>
             <div class="col">
                 <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/kitchen.html">
-                    <img class="img-fluid img-prod" src="/src/img/logo/logo-vagon.JPG" alt="manualidades, vagon, telas, costura, kids, carpas">
+                    <img class="img-fluid img-prod" src="/src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
                     <p>KITCHEN</p>
                 </a>   
             </div>
             <div class="col">
                 <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/kids.html">
-                    <img class="img-fluid img-prod" src="/src/img/logo/logo-vagon.JPG" alt="manualidades, vagon, telas, costura, kids, carpas">
+                    <img class="img-fluid img-prod" src="/src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
                     <p>KIDS</p>
                 </a>  
             </div>
