--- a/index.html
+++ b/index.html
@@ -110,28 +110,26 @@
     </section>
 
     <!-- imagenes -->
-    <!-- <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000">
-            <div class">
-                <img src="./src/img/avatar.jpg" class="d-block w-100"  alt="...">
-            </div>  
-            
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+            <div class="carousel-item active" data-bs-interval="10000">
+              <img src="./src/img/logo/logo-muestra.jpg" class="d-block w-50" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Rosana</h5>
+                <p>Dueña y creadora.</p>
+              </div>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="./src/img/logo/logo-muestra.jpg" class="d-block w-50" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Sofi.</h5>
+              <p>Community Manager.</p>
             </div>
           </div>
         </div>
@@ -143,12 +141,12 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div> -->
+      </div>
 
 
 
 
-    <section class="d-flex justify-content-center">
+    <!-- <section class="d-flex justify-content-center">
         <figure class="figure">
             <img src="/src/img/avatar.jpg" class="figure-img img-fluid rounded" alt="manualidades, vagon, telas, costura, kids, carpas">
             <figcaption class="figure-caption text-center nombre">Ro.</figcaption>
@@ -157,7 +155,7 @@
             <img src="/src/img/avatar.jpg" class="figure-img img-fluid rounded" alt="manualidades, vagon, telas, costura, kids, carpas">
             <figcaption class="figure-caption text-center nombre">Sofi.</figcaption>
         </figure>
-    </section>
+    </section> -->
     
     <!-- fin seccion nosotras -->
 
@@ -175,19 +173,19 @@
     <!-- grid -->
     <section class="container">
         <div class="row justify-content-center text-center mt-5">
-            <div class="col">
+            <div class="col-lg-4 col-md-4 col-sm-12">
                 <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/homedeco.html">
                     <img class="img-fluid img-prod" src="/src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
                     <p>HOME & DECO</p>
                 </a>
             </div>
-            <div class="col">
+            <div class="col-lg-4 col-md-4 col-sm-12">
                 <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/kitchen.html">
                     <img class="img-fluid img-prod" src="/src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
                     <p>KITCHEN</p>
                 </a>   
             </div>
-            <div class="col">
+            <div class="col-lg-4 col-md-4 col-sm-12">
                 <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/kids.html">
                     <img class="img-fluid img-prod" src="/src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
                     <p>KIDS</p>
@@ -270,16 +268,16 @@
     <!-- seccion carousel -->
     <section class="d-flex justify-content-center">
         <div id="carouselExampleControls" class="carousel slide w-25" data-bs-ride="carousel">
-            <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="./src/img/novedades/novedades.JPG" class="d-block w-100" alt="manualidades, vagon, telas, costura, kids, carpas">
-            </div>
-            <div class="carousel-item">
-                <img src="./src/img/novedades/novedades.JPG" class="d-block w-100" alt="manualidades, vagon, telas, costura, kids, carpas">
-            </div>
-            <div class="carousel-item">
-                <img src="./src/img/novedades/novedades.JPG" class="d-block w-100" alt="manualidades, vagon, telas, costura, kids, carpas">
-            </div>
+            <div class="carousel-inner mt-3 mb-4">
+                <div class="carousel-item active">
+                    <img src="./src/img/novedades/novedades.JPG" class="d-block w-100" alt="manualidades, vagon, telas, costura, kids, carpas">
+                </div>
+                <div class="carousel-item">
+                    <img src="./src/img/novedades/novedades.JPG" class="d-block w-100" alt="manualidades, vagon, telas, costura, kids, carpas">
+                </div>
+                <div class="carousel-item">
+                    <img src="./src/img/novedades/novedades.JPG" class="d-block w-100" alt="manualidades, vagon, telas, costura, kids, carpas">
+                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
