--- a/index.html
+++ b/index.html
@@ -110,39 +110,35 @@
     </section>
 
     <!-- imagenes -->
-    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
+    <section class="d-flex justify-content-center">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide w-50" data-bs-ride="carousel">
+            <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-              <img src="./src/img/logo/logo-muestra.jpg" class="d-block w-50" alt="...">
-              <div class="carousel-caption d-none d-md-block">
+                <img src="./src/img/avatar.jpg" class="d-block w-100 pb-3 mb-3 img-nos" alt="...">
+                <div class="carousel-caption d-none d-md-block">
                 <h5>Rosana</h5>
                 <p>Dueña y creadora.</p>
-              </div>
+                </div>
             </div>
-          </div>
-          <div class="carousel-item" data-bs-interval="2000">
-            <img src="./src/img/logo/logo-muestra.jpg" class="d-block w-50" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Sofi.</h5>
-              <p>Community Manager.</p>
+            <div class="carousel-item" data-bs-interval="2000">
+                <img src="/src/img/avatar.jpg" class="d-block w-100 pb-3 mb-3 img-nos" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                <h5>Sofia</h5>
+                <p>Community Manager.</p>
+                </div>
             </div>
-          </div>
+            
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-
+    </section>
 
 
 
