--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
 
     <!-- SEO -->
     <meta name="description" content="Descripcion breve acerca del sitio y cosas que necesitamos que sean visibles para una description atractiva">
-    <meta name="og:title" property="og:title" content="Un Vagon de Ideas">
+    <!-- keywords -->
+    <meta name="keywords" content="telas, manualidades, costura, carteras, carpas infantiles, diseño">
+    <!-- og -->
+    <meta property="og:locale" content="es_ES">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Un Vagon de Ideas">
+    <meta property="og:url" content="https://unavagondeideas.000webhostapp.com/">
+    <meta property="og:image" content="https://ibb.co/NmH9CZ0">
+    <meta property="og:description" content="Un vagon de Ideas se dedica a la confección de manualidades, o cualquier producto en tela solicitado por el cliente.">
+    <meta property="og:site_name" content="Un Vagon de Ideas">
+    
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -111,17 +121,17 @@
 
     <!-- imagenes -->
     <section class="d-flex justify-content-center">
-        <div id="carouselExampleDark" class="carousel carousel-dark slide w-50" data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="./src/img/avatar.jpg" class="d-block w-100 pb-3 mb-3 img-nos" alt="...">
+                <img src="./src/img/avatar.jpg" class="d-block w-50 pb-3 mb-3 img-nos" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 <h5>Rosana</h5>
                 <p>Dueña y creadora.</p>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="/src/img/avatar.jpg" class="d-block w-100 pb-3 mb-3 img-nos" alt="...">
+                <img src="/src/img/avatar.jpg" class="d-block w-50 pb-3 mb-3 img-nos" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 <h5>Sofia</h5>
                 <p>Community Manager.</p>
