--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO -->
-    <meta name="description" content="Descripcion breve acerca del sitio y cosas que necesitamos que sean visibles para una description atractiva">
+    <meta name="description" content="Un Vagon de Idea es un emprendimiento donde entre telas,
+    agujas e hilachas soy feliz. Te invito a subir a mi vagón y juntas recorrer mis creaciones que están hechas con 
+    mucho amor.">
     <!-- keywords -->
     <meta name="keywords" content="telas, manualidades, costura, carteras, carpas infantiles, diseño">
     <!-- og -->
@@ -42,7 +44,7 @@
         <nav class="navbar navbar-expand-lg navbar-light navbar-personal">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./src/img/logo/logo-vagon.jpg" alt="manualidades, vagon, telas, costura, kids, carpas" class="d-inline-block align-text-center logo">
+                    <img src="./src/img/logo/logo-vagon.jpg" alt="logo-vagon" class="d-inline-block align-text-center logo">
                     Un Vagon de Ideas
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -121,31 +123,30 @@
 
     <!-- imagenes -->
     <section class="d-flex justify-content-center">
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide w-25" data-bs-ride="carousel">
             <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-                <img src="./src/img/avatar.jpg" class="d-block w-50 pb-3 mb-3 img-nos" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                <h5>Rosana</h5>
-                <p>Dueña y creadora.</p>
+                <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="./src/img/avatar.jpg" class="d-block w-100 mb-3 img-nos" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5 class="mt-4">Rosana</h5>
+                    <p>Dueña y creadora.</p>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-                <img src="/src/img/avatar.jpg" class="d-block w-50 pb-3 mb-3 img-nos" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                <h5>Sofia</h5>
-                <p>Community Manager.</p>
+                <div class="carousel-item" data-bs-interval="2000">
+                    <img src="/src/img/avatar.jpg" class="d-block w-100 mb-3 img-nos" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                    <h5>Sofia</h5>
+                    <p>Community Manager.</p>
+                    </div>
                 </div>
-            </div>
-            
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
         </div>
     </section>
