--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <nav class="navbar navbar-expand-lg navbar-light navbar-personal">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./src/img/logo/logo-vagon.jpg" alt="logo-vagon" class="d-inline-block align-text-center logo">
+                    <img src="./src/img/logo/logo-vagon.JPG" alt="logo-vagon" class="d-inline-block align-text-center logo">
                     Un Vagon de Ideas
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="/src/img/avatar.jpg" class="d-block w-100 mb-3 img-nos" alt="...">
+                    <img src="./src/img/avatar.jpg" class="d-block w-100 mb-3 img-nos" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                     <h5>Sofia</h5>
                     <p>Community Manager.</p>
@@ -182,19 +182,19 @@
         <div class="row justify-content-center text-center mt-5">
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/homedeco.html">
-                    <img class="img-fluid img-prod" src="/src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
+                    <img class="img-fluid img-prod" src="./src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
                     <p>HOME & DECO</p>
                 </a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/kitchen.html">
-                    <img class="img-fluid img-prod" src="/src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
+                    <img class="img-fluid img-prod" src="./src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
                     <p>KITCHEN</p>
                 </a>   
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <a class="text-reset text-decoration-none text-prod-deco" href="/src/pages/kids.html">
-                    <img class="img-fluid img-prod" src="/src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
+                    <img class="img-fluid img-prod" src="./src/img/logo/logo-muestra.jpg" alt="manualidades, vagon, telas, costura, kids, carpas">
                     <p>KIDS</p>
                 </a>  
             </div>
