--- a/src/pages/homedeco.html
+++ b/src/pages/homedeco.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- SEO -->
+    <meta name="description" content="Un Vagon de Idea es un emprendimiento donde entre telas,
+    agujas e hilachas soy feliz. Te invito a subir a mi vagón y juntas recorrer mis creaciones que están hechas con 
+    mucho amor.">
+
+    <!-- keywords -->
+    <meta name="keywords" content="telas, manualidades, costura, carteras, carpas infantiles, diseño">
+
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
@@ -25,13 +33,13 @@
         <nav class="navbar navbar-expand-lg navbar-light navbar-personal">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../../src/img/logo/logo-vagon.jpg" alt="" width="45" height="40" class="d-inline-block align-text-center logo">
+                    <img src="../../src/img/logo/logo-vagon.JPG" alt="" class="d-inline-block align-text-center logo">
                     Un Vagon de Ideas
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse d-flex justify-content-end navItems" id="navbarNavDropdown">
+              <div class="collapse navbar-collapse justify-content-end navItems" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link" href="../../index.html">Inicio</a>
