Remove host logo - og fix

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <meta property="og:title" content="Un Vagon de Ideas">
     <meta property="og:url" content="https://unavagondeideas.000webhostapp.com/">
     <meta property="og:image" content="https://ibb.co/NmH9CZ0">
+    <meta property="og:image:secure_url" content="https://ibb.co/NmH9CZ0">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="300">
+    <meta property="og:image:alt" content="Vagon-Logo">
     <meta property="og:description" content="Un vagon de Ideas se dedica a la confección de manualidades, o cualquier producto en tela solicitado por el cliente.">
     <meta property="og:site_name" content="Un Vagon de Ideas">
     
@@ -152,25 +157,6 @@
     </section>
 
 
-
-    <!-- <section class="d-flex justify-content-center">
-        <figure class="figure">
-            <img src="/src/img/avatar.jpg" class="figure-img img-fluid rounded" alt="manualidades, vagon, telas, costura, kids, carpas">
-            <figcaption class="figure-caption text-center nombre">Ro.</figcaption>
-        </figure>
-        <figure class="figure">
-            <img src="/src/img/avatar.jpg" class="figure-img img-fluid rounded" alt="manualidades, vagon, telas, costura, kids, carpas">
-            <figcaption class="figure-caption text-center nombre">Sofi.</figcaption>
-        </figure>
-    </section> -->
-    
-    <!-- fin seccion nosotras -->
-
-
-
-
-
-
     <!-- seccion productos -->
     <!-- titulo -->
     <section>
@@ -200,8 +186,6 @@
             </div>
         </div>
     </section>
-
-
 
 
 
